# Didi_challenge_2017_Python

./: Automatic_lidar_and_tracklet_converter.ipynb  Full_view_detection.ipynb  Model_Task  README.md  cluster_classify_model.py  cluster_classify_prediction.ipynb  cluster_classify_prediction.py  cluster_classify_train.py  cluster_classify_util.py  clustering_and_detect_bad_label.ipynb  convert_kiti_to_numpy.ipynb  convert_kiti_to_numpy.py  convert_to_full_view_panorama.py  convert_to_panorama.py  data_exploration.ipynb  extract_points.launch  full_view_car_detect.md  full_view_train.py  fully_conv_model_for_lidar.py  fully_conv_model_for_lidar_2.py  generate_tracklet.ipynb  index.txt  kitti_data_convert_numpy_to_panorama.py  kor_didi.launch  kor_didi2.launch  kor_didi_run.sh  kor_didi_run.sh~  lidar_to_bird_view.ipynb  model_README.md  test_detect_car.ipynb  test_on_udacity_data.ipynb  test_on_udacity_data.py  train.py  train_2.py  util_func.ipynb  util_func.py  util_func_tf.py  util_func_v2.py  visualize_predicted_data.ipynb
kitti_data/: io.py
kitti_data/pykitti/: tracklet.py
kor_didi_pkg/: CMakeLists.txt  package.xml  package.xml~  setup.py
kor_didi_pkg/src/: bag_publisher.cpp  cpp_processor.cpp  image_processor.cpp  kf_localizer.cpp  point_extractor.py  py_processor.py
logs/: bad_car_labels.txt
one_frame_data/: tracklet.xml  tracklet_gt.xml
ros_scripts/: README.md  extract_points.sh  extract_points.sh~  extract_points_all  extract_points_all.sh  extract_points_all.sh~  extract_points_in_folder  kor_didi.launch
round1_version/: Full_view_detection.ipynb  Mean_and_Variance_Calculator.ipynb  convert_kiti_to_numpy.ipynb  data_exploration.ipynb
saved_model/: numcar_ind.pickle
